# cph-sodas.github.io

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  notes.md  pyproject.toml  requirements.txt  sitemap.xml
.github/wordflows/: ci.yml
.github/workflows/: ci.yml
assets/javascripts/: bundle.83f73b43.min.js
cheatsheets/: index.html
cheatsheets/communication/: index.html
cheatsheets/ethics/: index.html
docs/: index.md  test.html
docs/server/: access.md  index.md  setup.md  tips.md  usage.md
docs/server/guides/: index.md  llms.md  ucloud.md
docs/stylesheets/: extra.css
guides/VPN/: index.html
javascripts/: extra.js
overrides/: announcement.html  main.html
search/: search_index.json
server/: index.html
server/access/: index.html
server/guides/: index.html
server/guides/llms/: index.html
server/guides/lunch-pres/: index.html
server/guides/lunch-pres/workflow_files/libs/bootstrap/: bootstrap-08c51c3f28a05300be652669dc15fce5.min.css
server/guides/ucloud/: index.html
server/setup/: index.html
server/tips/: index.html
server/usage/: index.html
