[project]
name = "sodas-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.5.41",
    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
    "mdx-truly-sane-lists>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sodas_docs"]

